--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -73,6 +73,7 @@
               <p>{{this}}</p>
             {{/each}}
           </blockquote>
+          {{> changelogButtons}}
           {{#each changelog}}
             {{> ticketChangelogItem}}
           {{/each}}
