--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -25,14 +25,18 @@
       {{/each}}
     </td>
     <td>
-      <div class="dropdown" data-ticket="{{_id}}">
-        <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret dropdown-toggle"></span></button>
-        <ul class="dropdown-menu" name="statusMenu" role="menu" aria-labelledby="ticketStatusDropdown">
-          <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
-          <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
-          <li role="presentation" class="ticket-status-input"><input type="text" name="customStatus" placeholder="Or a custom status"></li>
-        </ul>
-      </div>
+      {{#if queueMember}}
+        <div class="dropdown" data-ticket="{{_id}}">
+          <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret dropdown-toggle"></span></button>
+          <ul class="dropdown-menu" name="statusMenu" role="menu" aria-labelledby="ticketStatusDropdown">
+            <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
+            <li role="presentation" class="ticket-status-input"><input type="text" name="customStatus" placeholder="Or a custom status"></li>
+          </ul>
+        </div>
+        {{else}}
+        {{status}}
+      {{/if}}
     </td>
     <td>{{>timeFromNow date=submittedTimestamp}}</td>
   </tr>
@@ -77,7 +81,7 @@
           {{#each changelog}}
             {{> ticketChangelogItem}}
           {{/each}}
-          {{> ticketNoteInput admin=true ticket=_id}}
+          {{> ticketNoteInput queueMember=queueMember ticket=_id}}
         </div>
       </div>
     </td>
