--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -38,7 +38,7 @@
         {{> ticketChangelogItem}}
       {{/each}}
 
-      {{> ticketNoteInput admin=admin ticket=_id}}
+      {{> ticketNoteInput queueMember=queueMember ticket=_id}}
     </div>
   {{/with}}
 </template>
