--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -21,7 +21,7 @@
     </label>
   </div>
   <div class="col-xs-8 col-md-10">
-    <div class="well well-sm note-well" style="text-align: left;">{{linkify message}}</div>
+    <div class="well well-sm note-well {{internalNoteClass}}" style="text-align: left;">{{linkify message}}</div>
   </div>
 </div>
 {{else}}
@@ -80,7 +80,7 @@
   <div name="associatedUsers" class="panel panel-default">
     <div class="panel-heading">Assigned Users</div>
     <div class="panel-body">
-      {{#if admin}}
+      {{#if queueMember}}
         <div class="assign-user-field">
           <span class="icon glyphicon glyphicon-plus"></span>
           {{>inputAutocomplete settings=userSettings name="assignUser" placeholder="Assign User" data-toggle="tooltip" data-trigger="manual" title="User not found."}}
@@ -96,7 +96,7 @@
   <div name="tags" class="panel panel-default">
     <div class="panel-heading">Tags</div>
     <div class="panel-body">
-      {{#if admin}}
+      {{#if queueMember}}
         <div class="add-tag-field">
           <span class="icon glyphicon glyphicon-plus"></span>
           {{>inputAutocomplete settings=tagSettings name="addTag" placeholder="Add a tag"}}
@@ -145,24 +145,41 @@
 </template>
 
 <template name="ticketNoteInput">
-<div class="form-group">
-  <div class="col-xs-12 col-md-10 col-md-offset-2">
-    <div class="input-group">
-      {{#if admin}}
-        {{> inputAutocomplete name="newNoteAdmin" class="form-control" placeholder="Add a new note..." settings=settings data-ticket=_id }}
-      {{else}}
-        <input class="form-control" placeholder="Add a new note..." name="newNote" data-ticket="{{_id}}">
-      {{/if}}
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="False">Attach File <span class="caret"></span></button>
-        <ul class="dropdown-menu" role="menu">
-          <li><a data-action="uploadFile">Upload File</a></li>
-          {{#if isCordova}}<li><a href="#">Take Picture</a></li>{{/if}}
-        </ul>
+  {{#if queueMember}}
+    <div class="row">
+      <div class="note-input-buttons">
+        <small>
+          {{#if internalNotes}}
+            Your note will be visible to queue members only.
+            {{else}}
+            Your note will be visible to the ticket requester and queue members.
+          {{/if}}
+        </small>
+        &nbsp;|&nbsp;
+        <button class="btn btn-xs btn-primary {{publicNoteClass}}" name="publicNotes">Publicly Visible</button>
+        <button class="btn btn-xs btn-primary {{internalNoteClass}}" name="internalNotes">Internal Only</button>
+      </div>
+    </div>
+  {{/if}}
+
+  <div class="form-group">
+    <div class="col-xs-12 col-md-10 col-md-offset-2">
+      <div class="input-group">
+        {{#if queueMember}}
+          {{> inputAutocomplete name="newNoteAdmin" class=newNoteInputClass placeholder="Add a new note..." settings=settings data-ticket=_id }}
+        {{else}}
+          <input class="form-control" placeholder="Add a new note..." name="newNote" data-ticket="{{_id}}">
+        {{/if}}
+        <div class="input-group-btn">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="False">Attach File <span class="caret"></span></button>
+          <ul class="dropdown-menu" role="menu">
+            <li><a data-action="uploadFile">Upload File</a></li>
+            {{#if isCordova}}<li><a href="#">Take Picture</a></li>{{/if}}
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </template>
 
 <template name="ticketTag">
