--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -7,7 +7,7 @@
       {{> ticketHeading}}
       {{> ticketInfoTable}}
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9 ticket-note-area">
       <label for="title">Title:</label>
       <blockquote>
         <strong>
