--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -3,7 +3,7 @@
     No ticket found.
   {{/unless}}
   {{#with ticket}}
-    <div class="col-md-3" data-ticketId="{{_id}}">
+    <div class="col-md-3 ticket-sidebar" data-ticketId="{{_id}}">
       {{> ticketHeading}}
       {{> ticketInfoTable}}
     </div>
