--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -1,8 +1,41 @@
-<template name="changelogButtons">
+<template name="ticketSidebar">
+  {{> ticketHeadingPanels}}
+  {{> ticketInfoPanels}}
+</template>
+
+<template name="formFieldsPanel">
   <div class="row">
-    <div class="changelog-buttons">
-      <button name="allEvents" class="btn btn-xs btn-primary {{allEventsClass}}">Show all events</button>
-      <button name="notesOnly" class="btn btn-xs btn-primary {{notesOnlyClass}}">Show notes only</button>
+    <div class="hidden-xs col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <span name="moreInfoGlyph" class="glyphicon glyphicon-chevron-right"></span><a data-toggle="collapse" href="#info-panel-{{_id}}"> More Info</a>
+        </div>
+        <div id="info-panel-{{_id}}" class="panel-collapse collapse">
+          <div id="panel-body">
+            <table class="table table-default">
+              <tbody>
+                {{#each arrayify formFields}}
+                  <tr>
+                    <td class="col-xs-2 col-md-2"><strong>{{name}}</strong></td>
+                    <td class="col-xs-10 col-md-10">{{value}}</td>
+                  </tr>
+                {{/each}}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</template>
+
+<template name="ticketNoteArea">
+  <div class="panel panel-default">
+    <div class="panel-body">
+      {{#each changelog.items}}
+        {{> ticketChangelogItem}}
+      {{/each}}
+      {{> ticketNoteInput queueMember=queueMember ticketId=_id}}
     </div>
   </div>
 </template>
@@ -75,7 +108,7 @@
 {{/if}}
 </template>
 
-<template name="ticketInfoTable">
+<template name="ticketInfoPanels">
   <!-- Assigned User Panel --> 
   <div name="associatedUsers" class="panel panel-default">
     <div class="panel-heading">Assigned Users</div>
@@ -145,39 +178,29 @@
 </template>
 
 <template name="ticketNoteInput">
-  {{#if queueMember}}
-    <div class="row">
-      <div class="note-input-buttons">
-        <small>
-          {{#if internalNotes}}
-            Your note will be visible to queue members only.
-            {{else}}
-            Your note will be visible to the ticket requester and queue members.
-          {{/if}}
-        </small>
-        &nbsp;|&nbsp;
-        <button class="btn btn-xs btn-primary {{publicNoteClass}}" name="publicNotes">Publicly Visible</button>
-        <button class="btn btn-xs btn-primary {{internalNoteClass}}" name="internalNotes">Internal Only</button>
-      </div>
-    </div>
-  {{/if}}
-
-  <div class="form-group">
+  <div class="row ticket-note-input-area">
     <div class="col-xs-12 col-md-10 col-md-offset-2">
-      <div class="input-group">
-        {{#if queueMember}}
-          {{> inputAutocomplete name="newNoteAdmin" class=newNoteInputClass placeholder="Add a new note..." settings=settings data-ticket=_id }}
+      {{#if queueMember}}
+        {{> inputAutocomplete name="newNoteAdmin" class='form-control' placeholder="Add a new note..." settings=settings data-ticket=_id }}
         {{else}}
-          <input class="form-control" placeholder="Add a new note..." name="newNote" data-ticket="{{_id}}">
+        <input class="form-control" placeholder="Add a new note..." name="newNote" data-ticket="{{_id}}">
+      {{/if}}
+    </div>
+  </div>
+  <div class="row">
+    <div class="note-input-buttons">
+      {{#if queueMember}}
+        {{#if closed}}
+          <button class="btn btn-sm btn-default" name="addNoteAndReOpen">Re-Open Ticket</button>
+          {{else}}
+          <button class="btn btn-sm btn-default" name="addNoteAndClose">Close Ticket</button>
         {{/if}}
-        <div class="input-group-btn">
-          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="False">Attach File <span class="caret"></span></button>
-          <ul class="dropdown-menu" role="menu">
-            <li><a data-action="uploadFile">Upload File</a></li>
-            {{#if isCordova}}<li><a href="#">Take Picture</a></li>{{/if}}
-          </ul>
-        </div>
-      </div>
+        <button class="btn btn-sm btn-default" name="addInternalNote">Add Internal Note</button>
+        <button class="btn btn-sm btn-success" name="addNoteAdmin">Add Note</button>
+        {{else}}
+        <button class="btn btn-sm btn-success" name="addNote">Add Note</button>
+      {{/if}}
+
     </div>
   </div>
 </template>
@@ -193,7 +216,7 @@
 </div>
 </template>
 
-<template name="ticketHeading">
+<template name="ticketHeadingPanels">
   <div class="panel panel-default">
     <div class="panel-body">
       <small>
