--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -40,51 +40,33 @@
     </td>
     <td>{{>timeFromNow date=submittedTimestamp}}</td>
   </tr>
+
+  <!-- Expandable Ticket Area -->
   <tr>
     <td colspan='6' class="hiddenRow">
-      <div class="accordion-body collapse" id="row{{_id}}" data-ticket="{{_id}}">
+      <div class="accordion-body collapse ticket-collapse" id="row{{_id}}" data-ticket="{{_id}}">
         <div class="row">
           <div class="col-md-3 ticket-sidebar">
-            {{> ticketHeading}}
-            {{> ticketInfoTable}}
+            {{> ticketSidebar}}
           </div>
 
           <div class="col-md-9 ticket-note-area">
-            {{#if blackbox}}
-              <div class="hidden-xs col-md-12 panel panel-default">
-                <div class="panel-heading">
-                  <span name="moreInfoCollapse" class="glyphicon glyphicon-chevron-down"></span><a data-toggle="collapse" href="#info-panel-{{_id}}">More Info</a>
-                </div>
-                <div id="info-panel-{{_id}}" class="panel-collapse collapse in">
-                  <div id="panel-body">
-                    <table class="table table-default">
-                      <tbody>
-                        {{#each arrayify formFields}}
-                          <tr>
-                            <td class="col-xs-2 col-md-2"><strong>{{name}}</strong></td>
-                            <td class="col-xs-10 col-md-10">{{value}}</td>
-                          </tr>
-                        {{/each}}
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
+            {{#if formFields}}
+              {{> formFieldsPanel}}
             {{/if}}
+            <div class="row">
+              <blockquote>
+                {{#each bodyParagraph}}
+                  <p>{{this}}</p>
+                {{/each}}
+              </blockquote>
+            </div>
 
-            <blockquote>
-              {{#each bodyParagraph}}
-                <p>{{this}}</p>
-              {{/each}}
-            </blockquote>
-            {{> changelogButtons}}
-            {{#each changelog}}
-              {{> ticketChangelogItem}}
-            {{/each}}
-            {{> ticketNoteInput queueMember=queueMember ticket=_id}}
+            {{> ticketNoteArea}}
           </div>
         </div>
       </div>
     </td>
   </tr>
+
 </template>
