--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -44,27 +44,35 @@
   <!-- Expandable Ticket Area -->
   <tr>
     <td colspan='6' class="hiddenRow">
-      <div class="accordion-body collapse ticket-collapse" id="row{{_id}}" data-ticket="{{_id}}">
+      <div class="accordion-body collapse ticket-collapse" id="row{{_id}}" style="border-left: 1px solid #eee; border-right: 1px solid #eee; border-bottom: 1px solid #eee;" data-ticket="{{_id}}">
+
+        <div class="row row-no-margin">
+          {{> ticketHeadingPanels}}
+        </div>
+        {{#if formFields}}
+          <div class="row">
+            {{> formFieldsPanel}}
+          </div>
+        {{/if}}
+        <div class="row row-no-margin">
+          <blockquote>
+            {{#each bodyParagraph}}
+              <p>{{this}}</p>
+            {{/each}}
+          </blockquote>
+        </div>
         <div class="row">
           <div class="col-md-3 ticket-sidebar">
-            {{> ticketSidebar}}
+            {{> ticketInfoPanels}}
           </div>
 
           <div class="col-md-9 ticket-note-area">
-            {{#if formFields}}
-              {{> formFieldsPanel}}
-            {{/if}}
-            <div class="row">
-              <blockquote>
-                {{#each bodyParagraph}}
-                  <p>{{this}}</p>
-                {{/each}}
-              </blockquote>
+            <div class="row row-no-margin">
+              {{> ticketNoteArea}}
             </div>
-
-            {{> ticketNoteArea}}
           </div>
         </div>
+
       </div>
     </td>
   </tr>
