--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -1,28 +1,25 @@
 <template name="ticketSidebar">
-  {{> ticketHeadingPanels}}
   {{> ticketInfoPanels}}
 </template>
 
 <template name="formFieldsPanel">
-  <div class="row">
-    <div class="hidden-xs col-md-12">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <span name="moreInfoGlyph" class="glyphicon glyphicon-chevron-right"></span><a data-toggle="collapse" href="#info-panel-{{_id}}"> More Info</a>
-        </div>
-        <div id="info-panel-{{_id}}" class="panel-collapse collapse">
-          <div id="panel-body">
-            <table class="table table-default">
-              <tbody>
-                {{#each arrayify formFields}}
-                  <tr>
-                    <td class="col-xs-2 col-md-2"><strong>{{name}}</strong></td>
-                    <td class="col-xs-10 col-md-10">{{value}}</td>
-                  </tr>
-                {{/each}}
-              </tbody>
-            </table>
-          </div>
+  <div class="hidden-xs col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <span name="moreInfoGlyph" class="glyphicon glyphicon-chevron-right"></span><a data-toggle="collapse" href="#info-panel-{{_id}}"> More Info</a>
+      </div>
+      <div id="info-panel-{{_id}}" class="panel-collapse collapse">
+        <div id="panel-body">
+          <table class="table table-default">
+            <tbody>
+              {{#each arrayify formFields}}
+                <tr>
+                  <td class="col-xs-2 col-md-2"><strong>{{name}}</strong></td>
+                  <td class="col-xs-10 col-md-10">{{value}}</td>
+                </tr>
+              {{/each}}
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -41,71 +38,72 @@
 </template>
 
 <template name="ticketChangelogItem">
-{{#if note}}
-<div class="row">
-  <div class="col-xs-4 col-md-2">
-    <label for="note-{{_id}}" class="control-label pull-right">
-      {{#if authorId}}
-        {{> userPortrait userId=authorId class="user-image"}}
-      {{else}}
-        {{authorEmail}} (via e-mail)
-      {{/if}}
-      <small style="font-size: 0.7em; font-weight: lighter;">{{>timeFromNow date=timestamp}}</small>
-    </label>
-  </div>
-  <div class="col-xs-8 col-md-10">
-    <div class="well well-sm note-well {{internalNoteClass}}" style="text-align: left;">{{linkify message}}</div>
-  </div>
-</div>
-{{else}}
-  {{#if allEvents}}
+  {{#if note}}
     <div class="row">
-      <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
-        {{#if changeIsType 'attachment'}}
-          {{#with otherId}}
-            {{#if file.thumbnail}}
-              <img class="img-thumbnail" style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
-            {{/if}}
-          {{/with}}
-        {{/if}}
-        <small style="font-size: 0.7em;">
-          {{#if changeIsType 'attachment'}}
-            {{#if oldValue}}
-              User {{authorName}} removed attached file {{oldValue}}
-            {{/if}}
-            {{#if newValue}}
-              User {{authorName}} attached file {{newValue}}
-            {{/if}}
+      <div class="col-xs-4 col-md-2">
+        <label for="note-{{_id}}" class="control-label pull-right">
+          {{#if authorId}}
+            {{> userPortrait userId=authorId class="user-image"}}
+            {{else}}
+            {{authorEmail}} (via e-mail)
           {{/if}}
-          {{#if changeIsType 'field'}}
-            {{#if fieldIs 'status'}}
-              User {{authorName}} changed status from {{oldValue}} to {{newValue}}
-            {{/if}}
-
-            {{#if fieldIs 'tags'}}
-              {{#if oldValue}}
-                User {{authorName}} removed tag(s) {{oldValue}}
-              {{/if}}
-              {{#if newValue}}
-                User {{authorName}} added tag(s) {{newValue}}
-              {{/if}}
-            {{/if}}
-
-            {{#if fieldIs 'associatedUserIds'}}
-              {{#if oldValue}}
-                User {{authorName}} removed associated user(s) {{oldValue}}
-              {{/if}}
-              {{#if newValue}}
-                User {{authorName}} associated user(s) {{newValue}}
-              {{/if}}
-            {{/if}}
-          {{/if}}
-          @ {{timestamp}}
-        </small>
+          <small style="font-size: 0.7em; font-weight: lighter;">{{>timeFromNow date=timestamp}}</small>
+        </label>
       </div>
-    </div>
-  {{/if}}
-{{/if}}
+      <div class="col-xs-8 col-md-10">
+        <div class="well well-sm note-well {{internalNoteClass}}" style="text-align: left;">
+          {{linkify message}}
+          {{#if internal}}<span class="glyphicon glyphicon-lock pull-right" title="This note is only visible to queue members."></span>{{/if}}
+        </div>
+        </div>
+      </div>
+      {{else}}
+      <div class="row">
+        <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
+          {{#if changeIsType 'attachment'}}
+            {{#with otherId}}
+              {{#if file.thumbnail}}
+                <img class="img-thumbnail" style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
+              {{/if}}
+            {{/with}}
+          {{/if}}
+          <small style="font-size: 0.7em;">
+            {{#if changeIsType 'attachment'}}
+              {{#if oldValue}}
+                User {{authorName}} removed attached file {{oldValue}}
+              {{/if}}
+              {{#if newValue}}
+                User {{authorName}} attached file {{newValue}}
+              {{/if}}
+            {{/if}}
+            {{#if changeIsType 'field'}}
+              {{#if fieldIs 'status'}}
+                User {{authorName}} changed status from {{oldValue}} to {{newValue}}
+              {{/if}}
+
+              {{#if fieldIs 'tags'}}
+                {{#if oldValue}}
+                  User {{authorName}} removed tag(s) {{oldValue}}
+                {{/if}}
+                {{#if newValue}}
+                  User {{authorName}} added tag(s) {{newValue}}
+                {{/if}}
+              {{/if}}
+
+              {{#if fieldIs 'associatedUserIds'}}
+                {{#if oldValue}}
+                  User {{authorName}} removed associated user(s) {{oldValue}}
+                {{/if}}
+                {{#if newValue}}
+                  User {{authorName}} associated user(s) {{newValue}}
+                {{/if}}
+              {{/if}}
+            {{/if}}
+            @ {{timestamp}}
+          </small>
+        </div>
+      </div>
+    {{/if}}
 </template>
 
 <template name="ticketInfoPanels">
@@ -191,14 +189,14 @@
     <div class="note-input-buttons">
       {{#if queueMember}}
         {{#if closed}}
-          <button class="btn btn-sm btn-default" name="addNoteAndReOpen">Re-Open Ticket</button>
+          <button class="btn btn-responsive btn-default" name="addNoteAndReOpen">Re-Open Ticket</button>
           {{else}}
-          <button class="btn btn-sm btn-default" name="addNoteAndClose">Close Ticket</button>
+          <button class="btn btn-responsive btn-default" name="addNoteAndClose">Close Ticket</button>
         {{/if}}
-        <button class="btn btn-sm btn-default" name="addInternalNote">Add Internal Note</button>
-        <button class="btn btn-sm btn-success" name="addNoteAdmin">Add Note</button>
+        <button class="btn btn-responsive btn-default" name="addInternalNote">Add Internal Note</button>
+        <button class="btn btn-responsive btn-success" name="addNoteAdmin">Add Note</button>
         {{else}}
-        <button class="btn btn-sm btn-success" name="addNote">Add Note</button>
+        <button class="btn btn-responsive btn-success" name="addNote">Add Note</button>
       {{/if}}
 
     </div>
@@ -219,23 +217,27 @@
 <template name="ticketHeadingPanels">
   <div class="panel panel-default">
     <div class="panel-body">
-      <small>
-      <a href="/ticket/{{ticketNumber}}">Ticket #{{ticketNumber}}</a><br>
-      <strong>{{queueName}}</strong><br>
-      {{>timestampFormatter date=submittedTimestamp}}<br>
-      ({{>timeFromNow date=submittedTimestamp}})
-    </small>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <div class="user-panel-portrait">{{> userPortrait userId=author._id}}</div>
-      <strong><small>
+      <div class="pull-left hidden-xs">
+        <div class="user-panel-portrait">{{> userPortrait userId=author._id}}</div>
+        <div class="user-panel-info">
           {{author.displayName}}<br>
           {{author.mail}}<br>
           {{author.department}}<br>
           {{author.physicalDeliveryOfficeName}}<br>
-    </small></strong>
+        </div>
+      </div>
+      <div class="pull-right hidden-xs">
+        <a href="/ticket/{{ticketNumber}}">Ticket #{{ticketNumber}}</a><br>
+        <strong>{{queueName}}</strong><br>
+        {{>timestampFormatter date=submittedTimestamp}}<br>
+        ({{>timeFromNow date=submittedTimestamp}})
+      </div>
+      <div class="hidden-sm hidden-md hidden-lg">
+        <a href="/ticket/{{ticketNumber}}">Ticket #{{ticketNumber}}</a><br>
+        <strong>{{queueName}}</strong><br>
+        {{>timestampFormatter date=submittedTimestamp}}<br>
+        ({{>timeFromNow date=submittedTimestamp}})
+      </div>
     </div>
   </div>
 </template>
