--- a/client/views/ticket/ticket.html
+++ b/client/views/ticket/ticket.html
@@ -3,10 +3,12 @@
     No ticket found.
   {{/unless}}
   {{#with ticket}}
-    <div class="col-md-3 ticket-sidebar" data-ticketId="{{_id}}">
-      {{> ticketSidebar}}
+
+    <div class="row row-no-margin">
+      {{> ticketHeadingPanels}}
     </div>
-    <div class="col-md-9 ticket-note-area">
+
+    <div class="row row-no-margin">
       <label for="title">Title:</label>
       <blockquote>
         <strong>
@@ -19,18 +21,24 @@
           <p>{{this}}</p>
         {{/each}}
       </blockquote>
-
-      <div class="hidden-xs col-md-12">
-        <table class="table table-default">
-          <tbody>
-            {{#if formFields}}
-              {{> formFieldsPanel}}
-            {{/if}}
-          </tbody>
-        </table>
-      </div>
-
-      {{> ticketNoteArea}}
     </div>
+
+    {{#if formFields}}
+      <div class="row">
+        {{> formFieldsPanel}}
+      </div>
+    {{/if}}
+
+    <div class="row">
+      <div class="col-md-9 ticket-note-area">
+        <div class="row row-no-margin">
+          {{> ticketNoteArea}}
+        </div>
+      </div>
+      <div class="col-md-3 ticket-sidebar">
+        {{> ticketInfoPanels}}
+      </div>
+    </div>
+
   {{/with}}
 </template>
