--- a/client/app.css
+++ b/client/app.css
@@ -231,6 +231,7 @@ body {
   float: left;
   color: #000;
   padding-left: 40px;
+  margin-right: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
