Fixes to allow photo taking from Cordova apps.

--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -154,7 +154,7 @@
 
         <ul class="dropdown-menu" data-toggle="dropdown">
           <li><a data-action="uploadFile">Upload File</a></li>
-          {{#if isCordova}}<li><a href="#">Take Picture</a></li>{{/if}}
+          {{#if isCordova}}<li><a data-action="takePicture">Take Picture</a></li>{{/if}}
         </ul>
       </div>
 
