Update message to indicate Triage is beta

--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -1,9 +1,9 @@
 <template name="queue">
 <div class="col-xs-12 col-sm-10">
-  {{#if alpha}}
+  {{#if beta}}
   <div class="row">
     <div class="alert alert-warning">
-      Triage is currently an <strong>alpha</strong> product. Some features may not yet be implemented and some bugs may be present. 
+      Triage is currently a <strong>beta</strong> product. Some features may not yet be implemented and some bugs may be present. 
       In the meantime, feel free to use Triage however you like - any attempts to break features are welcomed. 
       Please submit any feature requests, bug reports, or comments to the "App Dev" queue with the "Triage" tag.
     </div>
