Thumbnails in changelog now link to the file for download.

--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -63,7 +63,9 @@
           {{#if changeIsType 'attachment'}}
             {{#with otherId}}
               {{#if file.thumbnail}}
-                <img class="img-thumbnail" style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
+                <a href="/file/{{file.filenameOnDisk}}" target="_blank">
+                  <img class="img-thumbnail" style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
+                </a>
               {{/if}}
             {{/with}}
           {{/if}}
