--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -4,9 +4,10 @@
 
 <template name="formFieldsPanel">
   <div class="hidden-xs col-md-12">
-    <div class="panel panel-default">
+    <div class="panel panel-success more-info-panel">
       <div class="panel-heading">
-        <span name="moreInfoGlyph" class="glyphicon glyphicon-chevron-right"></span><a data-toggle="collapse" href="#info-panel-{{_id}}"> More Info</a>
+        <span name="details-glyph" class="glyphicon glyphicon-chevron-right"></span>&nbsp;
+        <a data-toggle="collapse" href="#info-panel-{{_id}}"><strong><span name="details">Show Details</span></strong></a>
       </div>
       <div id="info-panel-{{_id}}" class="panel-collapse collapse">
         <div id="panel-body">
