--- a/client/views/nav/queuebar/queuebar.html
+++ b/client/views/nav/queuebar/queuebar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-inverse navbar-static-top">
 <div class="container-fluid">
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#queueBar">
+    <button type="button" class="navbar-toggle collapsed queues-button" data-toggle="collapse" data-target="#queueBar">Queues
       <span class="sr-only">Toggle navigation</span>
     </button>
   </div>
