--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -31,7 +31,7 @@
     <div class="form-inline">
       <div class="form-group">
         <label for="body" class="control-label">Title:</label>
-        {{>inputAutocomplete settings=settings name="newTicket" class="form-control quick-add-input"}}
+        {{>inputAutocomplete settings=tokenSettings name="newTicket" class="form-control quick-add-input"}}
       </div>
       <div class="form-group">
         <label for="status" class="control-label">Status:</label>
