--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -51,6 +51,8 @@
     </div>
   </div>
   {{/if}}
+  {{> queueSummary}}
+
   <div class="row">
     <hr class="half-padding">
     <div class="pull-right">
