--- a/client/views/modals/newTicketModal/newTicketModal.html
+++ b/client/views/modals/newTicketModal/newTicketModal.html
@@ -1,5 +1,5 @@
-<template name="ticketModal">
-<div class="modal fade" id="ticketModal" role="dialog" aria-hidden="true">
+<template name="newTicketModal">
+<div class="modal fade" id="newTicketModal" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
