Fixes and layout events.

--- a/client/views/queue/ticketRow/ticketRow.html
+++ b/client/views/queue/ticketRow/ticketRow.html
@@ -1,7 +1,7 @@
 <template name="ticketRow">
   <tr data-toggle="collapse" class="accordion-toggle ticket-row" data-ticket="{{_id}}">
     <td class="hidden-xs">
-      <span class="badge">{{noteCount}}</span>
+      <span class="badge" title="{{noteCount}} notes">{{noteCount}}</span>
       {{#if repliedTo}}
         <span class="glyphicon glyphicon-comment"></span>
       {{/if}}
@@ -25,18 +25,7 @@
       {{/each}}
     </td>
     <td>
-      {{#if queueMember}}
-        <div class="dropdown" data-ticket="{{_id}}">
-          <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" name="statusButton" aria-expanded="false">{{status}}<span class="caret dropdown-toggle"></span></button>
-          <ul class="dropdown-menu" name="statusMenu" role="menu" aria-labelledby="ticketStatusDropdown">
-            <li role="presentation"><a role="menuitem" tabindex="-1">Open</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1">Closed</a></li>
-            <li role="presentation" class="ticket-status-input">{{> inputAutocomplete name="customStatus" placeholder="Or a custom status" settings=statusSettings}}</li>
-          </ul>
-        </div>
-        {{else}}
-        {{status}}
-      {{/if}}
+      {{status}}
     </td>
     <td>{{>timeFromNow date=submittedTimestamp}}</td>
   </tr>
