Add option to close tickets without sending emails; small bugfix in close/re-open ticket buttons.

--- a/client/views/ticket/ticketComponents.html
+++ b/client/views/ticket/ticketComponents.html
@@ -199,6 +199,9 @@
         {{#if closed}}
           <button class="btn btn-responsive btn-default" name="addNoteAndReOpen">Re-Open Ticket</button>
           {{else}}
+          {{#if beta}}
+            <button class="btn btn-responsive btn-default" name="closeSilently" title="Close ticket without sending any emails.">Close Ticket Silently</button>
+          {{/if}}
           <button class="btn btn-responsive btn-default" name="addNoteAndClose">Close Ticket</button>
         {{/if}}
         <button class="btn btn-responsive btn-default" name="addInternalNote">Add Internal Note</button>
