Calculate weekly leader.

--- a/client/views/queue/queueSummary.html
+++ b/client/views/queue/queueSummary.html
@@ -7,8 +7,8 @@
     week, there have been {{week.numSubmitted}} tickets
     submitted, with {{elapsed week.avgTimeToClose}} average close
     time.  {{weeklyLeader.username}} has closed the most
-    tickets this week, with an average time to close of
-    {{elapsed weeklyLeader.avgTimeToClose}}.
+    tickets this week at {{weeklyLeader.numClosed}}, with an average time to
+    close of {{elapsed weeklyLeader.avgTimeToClose}}.
   </div>
   {{/with}}
 </template>
